# terminalai

./: .gitignore  AGENTS.md  README.md  pyproject.toml  start.py  terminalai.config.json
.github/workflows/: ci.yml
src/terminalai/: __init__.py  cli.py  config.py
src/terminalai/agent/: loop.py  models.py
src/terminalai/llm/: __init__.py  client.py
src/terminalai/shell/: __init__.py  base.py  bash_adapter.py  cmd_adapter.py  powershell_adapter.py
tests/: conftest.py  test_agent_loop.py  test_cli.py  test_config.py  test_llm_client.py  test_shell_adapters.py  test_start.py
