[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminalai"
version = "0.1.0"
description = "Terminal-first AI assistant CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "TerminalAI Contributors" }]
dependencies = [
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
]

[project.scripts]
terminalai = "terminalai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
files = ["src/terminalai/shell"]
exclude = "^tests/"

[[tool.mypy.overrides]]
module = ["terminalai.shell.*"]
strict = true

